edit space layout

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <div class="container" id="scrollspyHeading1" style="background-image: url(asset/4k-tech-wallpapers-ashueffects\ \(1\).jpg);padding: 30px;">
             <br>
             <div class="row">
-                <div class="col-12 col-md-5">
-                    <img class="profileimg zoom mx-auto d-block" src="asset/mypic1.jpeg" height="350" width="350" style="border-radius: 50%;">
+                <div class="col-sm-12 col-lg-5">
+                    <img class="profileimg zoom mx-auto d-block" src="asset/mypic1.jpeg" height="350" width="350" style="border-radius: 50%;margin-bottom: 20px;">
                 </div>
 
                 <div class="col">
@@ -63,7 +63,7 @@
         <div class="container" id="scrollspyHeading2" style="background-image: url(asset/cristina-gottardi-moutain.jpg);background-size: cover;padding: 100px;">
             <br>
             <div class="row">
-                <div class="col">
+                <div class="col" style="margin-bottom: 20px;">
                     <h2>Graduated</h2><br>
                     <ul class="paragraph-forum">
                         <li><b>Primary school :</b> Nakprasith School</li>
@@ -71,7 +71,7 @@
                         <li><b>Bachelor’s Degree :</b> Mechanical Engineering at Kasetsart University</li>
                     </ul> 
                 </div>
-                <div class="col-12 col-md-6">
+                <div class="col-sm-12 col-lg-6">
                     <img class= "zoom mx-auto d-block" src="asset/15123125_1262744330449378_7888507191189558420_o.jpg" height="500" width="500" style="border-radius: 20px;">
                 </div>
             </div>
@@ -80,7 +80,7 @@
         <div class="container" id="scrollspyHeading3" style="background: url(asset/working-unsplash.jpg) center center;padding: 100px;">
             <h2>Work Experience</h2>
             <br>
-            <div class="timeline">
+            <div class="timeline col">
                 <div class="container1 left">
                     <div class="content">
                         <h2>2017</h2>
@@ -110,7 +110,7 @@
             <br>
             <h2>Skill</h2><br>
                 <div class="row">
-                    <div class="col-12 col-md-5">
+                    <div class="col-sm-12 col-lg-5">
                         <img class="mx-auto d-block" src="asset/photo-1531297484001-80022131f5a1.jpg" height="500" width="500">
                     </div>
                     <div class="col">
@@ -160,7 +160,7 @@
                     </div>
 
 
-                    <div class="col-12 col-md-5">
+                    <div class="col-sm-12 col-lg-5">
                         <img class= "mx-auto d-block zoom" src="asset/mypic2.jpeg" width="400" style="border-radius: 20px;">
                     </div>
                 </div>
