--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
         <div class="container" id="scrollspyHeading3" style="background: url(asset/working-unsplash.jpg) center center;padding: 100px;">
             <h2>Work Experience</h2>
             <br>
-            <div class="timeline col">
+            <div class="timeline">
                 <div class="container1 left">
                     <div class="content">
                         <h2>2017</h2>
-                        <p>My first job is Design Engineer. Using Solidworks 3D design Plastic Products</p>
+                        <p>My first job is Design Engineer. Using Solidworks 3D design Plastic Products.</p>
                     </div>
                 </div>
-                    <div class="container1 right">
-                        <div class="content">
-                            <h2>2020</h2>
-                            <p>Change job to Support Engineer(Sale-support about Technical data)</p>
-                        </div>
+                <div class="container1 right">
+                    <div class="content">
+                        <h2>2020</h2>
+                        <p>Change job to Support Engineer.(Sale-support about Technical data)</p>
                     </div>
+                </div>
                 <div class="container1 left">
                     <div class="content">
                         <h2>2023</h2>
@@ -113,7 +113,7 @@
                     <div class="col-sm-12 col-lg-5">
                         <img class="mx-auto d-block" src="asset/photo-1531297484001-80022131f5a1.jpg" height="500" width="500">
                     </div>
-                    <div class="col">
+                    <div class="col" style="margin: 30px;">
                         <li><b>Programming Skill</b></li>
                             <ul >
                                 <li>Python</li>
@@ -132,7 +132,7 @@
                             </ul>
                     </div>
             
-                    <div class="col">
+                    <div class="col" style="margin: 30px;">
                         <li><b>Engineering Skill</b></li>
                             <ul>
                                 <li>Solidwork 2D, 3D,FEM</li>
