update new timeline

--- a/index.html
+++ b/index.html
@@ -78,26 +78,30 @@
         </div>
 
         <div class="container" id="scrollspyHeading3" style="background: url(asset/working-unsplash.jpg) center center;padding: 100px;">
-            <h2>Work Experience</h2>
-            <br>
-            <div class="timeline">
-                <div class="container1 left">
-                    <div class="content">
-                        <h2>2017</h2>
-                        <p>My first job is Design Engineer. Using Solidworks 3D design Plastic Products.</p>
+            <div class="row">
+                <div class="col-sm-12">
+                <h2>Work Experience</h2>
+                <br>
+                <div class="timeline">
+                    <div class="container1 right">
+                        <div class="content">
+                            <h2>2017</h2>
+                            <p>My first job is Design Engineer. Using Solidworks 3D design Plastic Products.</p>
+                        </div>
+                    </div>
+                    <div class="container1 right">
+                        <div class="content">
+                            <h2>2020</h2>
+                            <p>Change job to Support Engineer.(Sale-support about Technical data)</p>
+                        </div>
+                    </div>
+                    <div class="container1 right">
+                        <div class="content">
+                            <h2>2023</h2>
+                            <p>Now.I still work as a Support Engineer. But I need change the job to Developer.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="container1 right">
-                    <div class="content">
-                        <h2>2020</h2>
-                        <p>Change job to Support Engineer.(Sale-support about Technical data)</p>
-                    </div>
-                </div>
-                <div class="container1 left">
-                    <div class="content">
-                        <h2>2023</h2>
-                        <p>Now.I still work as a Support Engineer. But I need change the job to Developer.</p>
-                    </div>
                 </div>
             </div>
         </div>
