--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>My Online Resume</title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, height=device-height, target-densitydpi=device-dpi, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <link rel="stylesheet" href="stylesheet.css">
@@ -78,28 +78,34 @@
         </div>
 
         <div class="container" id="scrollspyHeading3" style="background: url(asset/working-unsplash.jpg) center center;padding: 100px;">
-                <h2>Work Experience</h2>
+                <h2 class="p-5">Work Experience</h2>
                 <br>
-                <div class="timeline">
-                    <div class="container1 right">
-                        <div class="content">
-                            <h2>2017</h2>
-                            <p>My first job is Design Engineer. Using Solidworks 3D design Plastic Products.</p>
+                <div class="main-timeline">
+                    <div class="timeline left">
+                      <div class="card">
+                        <div class="card-body p-4">
+                          <h3>2017</h3>
+                          <p class="mb-0">My first job is Design Engineer. Using Solidworks 3D was design Plastic Products.</p>
                         </div>
+                      </div>
                     </div>
-                    <div class="container1 right">
-                        <div class="content">
-                            <h2>2020</h2>
-                            <p>Change job to Support Engineer.(Sale-support about Technical data)</p>
+                    <div class="timeline right">
+                      <div class="card">
+                        <div class="card-body p-4 content">
+                          <h3>2020</h3>
+                          <p class="mb-0">Change job to Support Engineer.(Sale-support about Technical data,Pricing)</p>
                         </div>
+                      </div>
                     </div>
-                    <div class="container1 right">
-                        <div class="content">
-                            <h2>2023</h2>
-                            <p>Now.I still work as a Support Engineer. But I need change the job to Developer.</p>
+                    <div class="timeline left">
+                      <div class="card">
+                        <div class="card-body p-4 content">
+                          <h3>2023</h3>
+                          <p class="mb-0">Now.I still work as a Support Engineer. But I'm interesting change the job to Developer.</p>
                         </div>
+                      </div>
                     </div>
-                </div>
+                  </div>
         </div>
 
 
@@ -139,7 +145,7 @@
                                 <li>AutoCAD</li>
                                 <li>Solving problem</li>
                             </ul>
-                        <li><b>Other:</b> MS Office,Photoshop,Vdo Editor,VScode</li>
+                        <li><b>Other:</b> MS Office,Photoshop,Github,VScode</li>
                     </div>
                 </div>
                 <br>
