--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                       <div class="card">
                         <div class="card-body p-4">
                           <h3>2017</h3>
-                          <p class="mb-0">My first job is Design Engineer. Using Solidworks 3D was design Plastic Products.</p>
+                          <p class="h5">My first job is Design Engineer. Using Solidworks 3D was design Plastic Products.</p>
                         </div>
                       </div>
                     </div>
@@ -93,7 +93,7 @@
                       <div class="card">
                         <div class="card-body p-4 content">
                           <h3>2020</h3>
-                          <p class="mb-0">Change job to Support Engineer.(Sale-support about Technical data,Pricing)</p>
+                          <p class="h5">Change job to Support Engineer.(Sale-support about Technical data,Pricing)</p>
                         </div>
                       </div>
                     </div>
@@ -101,7 +101,7 @@
                       <div class="card">
                         <div class="card-body p-4 content">
                           <h3>2023</h3>
-                          <p class="mb-0">Now.I still work as a Support Engineer. But I'm interesting change the job to Developer.</p>
+                          <p class="h5">Now.I still work as a Support Engineer. But I'm interesting change the job to Developer.</p>
                         </div>
                       </div>
                     </div>
