--- a/index.html
+++ b/index.html
@@ -40,27 +40,25 @@
         <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary" tabindex="0">
             
         </div>
-        <div class="container" id="scrollspyHeading1" style="background-image: url(asset/4k-tech-wallpapers-ashueffects\ \(1\).jpg);padding: 30px;">
+        <div class="container-fluid" id="scrollspyHeading1" style="background-image: url(asset/4k-tech-wallpapers-ashueffects\ \(1\).jpg);padding: 30px;">
             <br>
             <div class="row">
                 <div class="col-sm-12 col-lg-5">
                     <img class="profileimg zoom mx-auto d-block" src="asset/mypic1.jpeg" height="350" width="350" style="border-radius: 50%;margin-bottom: 20px;">
                 </div>
 
-                <div class="col">
+                <div class="col col-lg-5">
                     <h2>Introduction myself</h2><br>
-                    <p>" Welcome everyone to My website.My Name is <b>PRIDSADEE THONGVILARD.</b></p>
-                    <p>I graduated from <b>Mechanical Engineering.</b> But I am interested being <b>Programmer</b>.</p>
-                    <p>Because I like Computer and play Game.I excited to Learn The New Technology. "</p>
+                    <p class="h4">" Welcome everyone to My website.My Name is <b>PRIDSADEE THONGVILARD.</b><br>I graduated from <b>Mechanical Engineering.</b> But I am interested being <b>Programmer</b>.<br>Because I like Computer and play Game.I excited to Learn The New Technology. "</p>
                 </div>
             </div>
         </div>
 
         
-        <div class="container space gradcolor1"></div>
+        <div class="container-fluid space gradcolor1"></div>
 
 
-        <div class="container" id="scrollspyHeading2" style="background-image: url(asset/cristina-gottardi-moutain.jpg);background-size: cover;padding: 100px;">
+        <div class="container-fluid" id="scrollspyHeading2" style="background-image: url(asset/cristina-gottardi-moutain.jpg);background-size: cover;padding: 100px;">
             <br>
             <div class="row">
                 <div class="col" style="margin-bottom: 20px;">
@@ -77,7 +75,7 @@
             </div>
         </div>
 
-        <div class="container" id="scrollspyHeading3" style="background: url(asset/working-unsplash.jpg) center center;padding: 100px;">
+        <div class="container-fluid" id="scrollspyHeading3" style="background: url(asset/working-unsplash.jpg) center center;padding: 100px;">
                 <h2 class="p-5">Work Experience</h2>
                 <br>
                 <div class="main-timeline">
@@ -109,10 +107,10 @@
         </div>
 
 
-        <div class="container space gradcolor3" id="scrollspyHeading4"></div>
+        <div class="container-fluid space gradcolor3" id="scrollspyHeading4"></div>
 
 
-        <div class="container" style="background-color: black;">
+        <div class="container-fluid" style="background-color: black;">
             <br>
             <h2>Skill</h2><br>
                 <div class="row">
@@ -150,7 +148,7 @@
                 </div>
                 <br>
         </div>
-            <div class="container gradcolor4" id="scrollspyHeading5" style="padding: 100px;">
+            <div class="container-fluid gradcolor4" id="scrollspyHeading5" style="padding: 100px;">
                 <div class="row">
                     <div class="col">
                         <h2>Contract</h2>
