--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button onclick="topFunction()" id="myBtn"></button>
 
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-            <div class="container">
+            <div class="container-fluid">
               <h1 class="navbar-brand">MY RESUME</h1>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -40,16 +40,16 @@
         <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary" tabindex="0">
             
         </div>
-        <div class="container-fluid" id="scrollspyHeading1" style="background-image: url(asset/4k-tech-wallpapers-ashueffects\ \(1\).jpg);padding: 30px;">
+        <div class="container-fluid" id="scrollspyHeading1" style="background-image: url(asset/4k-tech-wallpapers-ashueffects\ \(1\).jpg);padding: 80px;">
             <br>
             <div class="row">
                 <div class="col-sm-12 col-lg-5">
-                    <img class="profileimg zoom mx-auto d-block" src="asset/mypic1.jpeg" height="350" width="350" style="border-radius: 50%;margin-bottom: 20px;">
+                    <img class="profileimg zoom mx-auto d-block" src="asset/mypic1.jpeg" style="border-radius: 50%;margin-bottom: 20px; height: auto;width: 400px;">
                 </div>
 
-                <div class="col col-lg-5">
-                    <h2>Introduction myself</h2><br>
-                    <p class="h4">" Welcome everyone to My website.My Name is <b>PRIDSADEE THONGVILARD.</b><br>I graduated from <b>Mechanical Engineering.</b> But I am interested being <b>Programmer</b>.<br>Because I like Computer and play Game.I excited to Learn The New Technology. "</p>
+                <div class="col col-lg">
+                    <h2 class="display-2">Introduction myself</h2><br>
+                    <p class="h4" style="text-align:start">" Welcome everyone to My website.My Name is <b>PRIDSADEE THONGVILARD.</b>I graduated from <b>Mechanical Engineering.</b> But I am interested being <b>Programmer</b>.Because I like Computer and play Game.I excited to Learn The New Technology. "</p>
                 </div>
             </div>
         </div>
@@ -58,11 +58,11 @@
         <div class="container-fluid space gradcolor1"></div>
 
 
-        <div class="container-fluid" id="scrollspyHeading2" style="background-image: url(asset/cristina-gottardi-moutain.jpg);background-size: cover;padding: 100px;">
+        <div class="container-fluid" id="scrollspyHeading2" style="background-image: url(asset/cristina-gottardi-moutain.jpg);background-size: cover;padding: 120px;">
             <br>
             <div class="row">
                 <div class="col" style="margin-bottom: 20px;">
-                    <h2>Graduated</h2><br>
+                    <h2 class="display-2">Graduated</h2><br>
                     <ul class="paragraph-forum">
                         <li><b>Primary school :</b> Nakprasith School</li>
                         <li><b>Secondary school :</b> Sampranwittaya School</li>
@@ -70,13 +70,13 @@
                     </ul> 
                 </div>
                 <div class="col-sm-12 col-lg-6">
-                    <img class= "zoom mx-auto d-block" src="asset/15123125_1262744330449378_7888507191189558420_o.jpg" height="500" width="500" style="border-radius: 20px;">
+                    <img class= "zoom mx-auto d-block" src="asset/15123125_1262744330449378_7888507191189558420_o.jpg" style="border-radius: 20px; height: auto;width: 400px;">
                 </div>
             </div>
         </div>
 
         <div class="container-fluid" id="scrollspyHeading3" style="background: url(asset/working-unsplash.jpg) center center;padding: 100px;">
-                <h2 class="p-5">Work Experience</h2>
+                <h2 class="display-2">Work Experience</h2>
                 <br>
                 <div class="main-timeline">
                     <div class="timeline left">
@@ -112,10 +112,10 @@
 
         <div class="container-fluid" style="background-color: black;">
             <br>
-            <h2>Skill</h2><br>
+            <h2 class="display-2">Skill</h2><br>
                 <div class="row">
                     <div class="col-sm-12 col-lg-5">
-                        <img class="mx-auto d-block" src="asset/photo-1531297484001-80022131f5a1.jpg" height="500" width="500">
+                        <img class="mx-auto d-block" src="asset/photo-1531297484001-80022131f5a1.jpg" style=" height: auto;width: 800px;">
                     </div>
                     <div class="col" style="margin: 30px;">
                         <li><b>Programming Skill</b></li>
@@ -151,7 +151,7 @@
             <div class="container-fluid gradcolor4" id="scrollspyHeading5" style="padding: 100px;">
                 <div class="row">
                     <div class="col">
-                        <h2>Contract</h2>
+                        <h2 class="display-2">Contract</h2>
                         <br>
                             <ul>
                                 <li><b>Email : </b>pridsadee789@gmail.com</li>
@@ -165,7 +165,7 @@
 
 
                     <div class="col-sm-12 col-lg-5">
-                        <img class= "mx-auto d-block zoom" src="asset/mypic2.jpeg" width="400" style="border-radius: 20px;">
+                        <img class= "mx-auto d-block zoom" src="asset/mypic2.jpeg" style="border-radius: 20px;height: auto;width: 400px;">
                     </div>
                 </div>
                 <br>
