--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>My Online Resume</title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, height=device-height, target-densitydpi=device-dpi, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+        <meta name="viewport" content="width=device-width, user-scalable=no" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <link rel="stylesheet" href="stylesheet.css">
@@ -114,7 +114,7 @@
             <br>
             <h2 class="display-2">Skill</h2><br>
                 <div class="row">
-                    <div class="col-sm-12 col-lg-5">
+                    <div class="col-sm-12 col-lg-6">
                         <img class="mx-auto d-block" src="asset/photo-1531297484001-80022131f5a1.jpg" style=" height: auto;width: 800px;">
                     </div>
                     <div class="col" style="margin: 30px;">
